# eg4-ctrl

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
eg4_monitor/: __init__.py  cli.py  client.py  exceptions.py  models.py
examples/: async_fetch.py  basic_fetch.py
tests/: test_client.py
